<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="wrap_content"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/appTitle"
        android:id="@+id/appTitle"
        android:layout_marginTop="25dp"
        android:layout_marginBottom="25dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/appTitle"
        android:layout_centerHorizontal="true">


    <Button
        style="@style/button_awesome"
        android:text="@string/app1"
        android:id="@+id/appButton1"
        android:onClick="appOne"/>

    <Button
        style="@style/button_awesome"
        android:text="@string/app2"
        android:id="@+id/appButton2" />

    <Button
        style="@style/button_awesome"
        android:text="@string/app3"
        android:id="@+id/appButton3" />

    <Button
        style="@style/button_awesome"
        android:text="@string/app4"
        android:id="@+id/appButton4" />

    <Button
        style="@style/button_awesome"
        android:text="@string/app5"
        android:id="@+id/appButton5" />

    <Button
        style="@style/button_awesome"
        android:text="@string/app6"
        android:id="@+id/appButton6" />

    </LinearLayout>

</RelativeLayout>